cleaned up some stuff from index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" value="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
@@ -16,7 +15,7 @@
       rel="stylesheet"
     />
     <script defer src="./script.js"></script>
-    <title>Homepage (Creative)</title>
+    <title>Homepage</title>
   </head>
   <body>
     <div class="background"></div>
@@ -128,71 +127,3 @@
     </div>
   </body>
 </html>
-
-<!-- 
-  <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" value="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600&display=swap"
-      rel="stylesheet"
-    />
-    <script defer src="./script.js"></script>
-    <title>Homepage (Creative)</title>
-  </head>
-  <body>
-    <div class="background"></div>
-    <div class="siteWrapper">
-      <div class="navigation_pane flex flex-center">
-        <nav>
-          <ul>
-            <li class="focus"><a id="home_link" href="#home" class="nav_links">Home</a></li>
-            <li><a id="about_link" href="#about" class="nav_links">About</a></li>
-            <li><a id="projects_link" href="#projects" class="nav_links">Projects</a></li>
-            <li><a id="contact_link" href="#contact" class="nav_links">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="display_pane">
-        <div id="home" class="page">
-          <div class="page_wrapper col">
-            <div class="page_image">
-              <div class="page_image_overlay"></div>
-              <img
-                src="https://images.unsplash.com/photo-1611647832580-377268dba7cb?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MXwxfDB8MXxyYW5kb218fHx8fHx8fA&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600"
-                alt="home page image"
-              />
-            </div>
-            <div class="page_text">
-              <p>My name is Dorian</p>
-            </div>
-          </div>
-        </div>
-        <div id="about" class="page">
-          <div class="page_wrapper col">
-            <div class="page_image switch_1">
-              <div class="page_image_overlay"></div>
-              <img src="./images/me.jpg" />
-            </div>
-            <div class="page_text switch_2">
-              <p>
-                i am a pharmacist by trade and a coder by heart. i'm driven, passionate, dedicated
-                and most importantly, a life-long learner. coding started as a hobby, a leftover
-                from an earlier foray into tech, and has been a endeavor that has come to fill every
-                second of my free time.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div id="projects" class="page">projects</div>
-        <div id="contact" class="page">contact</div>
-      </div>
-    </div>
-  </body>
-</html>
-
- -->
